--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     ]
   },
   "devDependencies": {
-    "prettier": "^2.8.0"
+    "prettier": "^2.8.0",
+    "react-test-renderer": "^18.2.0"
   }
 }
