--- a/api/Gemfile
+++ b/api/Gemfile
@@ -37,7 +37,7 @@ gem 'bootsnap', require: false
 # gem "image_processing", "~> 1.2"
 
 # Use Rack CORS for handling Cross-Origin Resource Sharing (CORS), making cross-origin AJAX possible
-# gem "rack-cors"
+gem 'rack-cors'
 
 # Load the environment using .env files
 gem 'dotenv-rails', '~>2.8.1'
