--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -12,6 +12,8 @@ RUN bundle install
 
 COPY . .
 
+RUN rm -f tmp/pids/server.pid
+
 EXPOSE 3000
 
 CMD bin/rails db:create && bin/rails db:migrate && bin/rails db:seed && bin/rails server -b 0.0.0.0
