--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,8 @@
     "react-dom": "^18.2.0",
     "react-fetch-hook": "^1.9.5",
     "react-router-dom": "^6.4.3",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "react-use-trigger": "^0.3.4"
   },
   "scripts": {
     "start": "react-scripts start",
