Fix frontend doesn't start on fresh run

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
     restart: always
     volumes:
       - ./frontend:/app
+      - /app/node_modules
     networks:
       - web-network
     ports:
